{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1390,
  "lineage": "70ce25e5-8af5-e824-0d03-afa268ab98b6",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "doh-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "doh-proxy/doh-proxy",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "doh-proxy",
                "namespace": "doh-proxy",
                "resource_version": "11466366",
                "uid": "fe863c3e-4df8-4ce8-a09d-1264b03b4b98"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "dns.lysakermoen.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "doh-proxy",
                                    "port": [
                                      {
                                        "name": "http",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.5.231"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "helm_release.coredns",
            "helm_release.longhorn",
            "helm_release.metallb",
            "helm_release.registry",
            "helm_release.traefik",
            "kubernetes_deployment.doh-proxy",
            "kubernetes_namespace.coredns",
            "kubernetes_namespace.doh-proxy",
            "kubernetes_namespace.longhorn",
            "kubernetes_namespace.metallb",
            "kubernetes_namespace.registry",
            "kubernetes_namespace.traefik",
            "kubernetes_service.doh-proxy",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "nginxtest",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginxtest/nginx",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 6,
                "labels": {},
                "name": "nginx",
                "namespace": "nginxtest",
                "resource_version": "6663237",
                "uid": "8d8ac361-195e-4323-ba72-2c64f9515f12"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "test.lysakermoen.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "nginx",
                                    "port": [
                                      {
                                        "name": "http",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.0.5.231"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "coredns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "coredns",
            "metadata": [
              {
                "generation": 0,
                "name": "coredns",
                "resource_version": "435388",
                "uid": "870aca04-adb9-4dc2-a14f-436cef0889cf"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "dnsentry",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dnsentry",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "pod-security.kubernetes.io/audit": "privileged",
                  "pod-security.kubernetes.io/enforce": "privileged",
                  "pod-security.kubernetes.io/warn": "privileged"
                },
                "name": "dnsentry",
                "resource_version": "6910865",
                "uid": "9033c1d0-c8a1-4f55-a4b9-1ebbd7168dda"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "doh-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "doh-proxy",
            "metadata": [
              {
                "generation": 0,
                "name": "doh-proxy",
                "resource_version": "11121910",
                "uid": "0ce69f1b-51b6-4147-bbac-fb5e8492ee35"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "grafana_prom_stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "grafana-prom-stack",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "pod-security.kubernetes.io/audit": "privileged",
                  "pod-security.kubernetes.io/enforce": "privileged",
                  "pod-security.kubernetes.io/warn": "privileged"
                },
                "name": "grafana-prom-stack",
                "resource_version": "9645938",
                "uid": "0a670c98-fb25-46bc-bcde-58383b4d483d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "infra_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "infra-api",
            "metadata": [
              {
                "generation": 0,
                "name": "infra-api",
                "resource_version": "12064502",
                "uid": "8f8600ab-b197-438f-9089-a94b54880192"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "longhorn",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "longhorn-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "pod-security.kubernetes.io/audit": "privileged",
                  "pod-security.kubernetes.io/enforce": "privileged",
                  "pod-security.kubernetes.io/warn": "privileged"
                },
                "name": "longhorn-system",
                "resource_version": "1020027",
                "uid": "a3507cda-635a-4be6-9b5d-d894f5806021"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "metallb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "metallb-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "pod-security.kubernetes.io/audit": "privileged",
                  "pod-security.kubernetes.io/enforce": "privileged",
                  "pod-security.kubernetes.io/warn": "privileged"
                },
                "name": "metallb-system",
                "resource_version": "3949",
                "uid": "47b88df2-ba7e-490e-8ba0-bd19cf46d11a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "nginxtest",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginxtest",
            "metadata": [
              {
                "generation": 0,
                "name": "nginxtest",
                "resource_version": "5245986",
                "uid": "bb76e587-d79b-4a04-8434-29fbc2724d62"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "registry",
            "metadata": [
              {
                "generation": 0,
                "name": "registry",
                "resource_version": "10929557",
                "uid": "879cf5f7-cbb6-418c-8e6a-6273289e06db"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "traefik",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "pod-security.kubernetes.io/audit": "privileged",
                  "pod-security.kubernetes.io/enforce": "privileged",
                  "pod-security.kubernetes.io/warn": "privileged"
                },
                "name": "traefik",
                "resource_version": "1116550",
                "uid": "deb7f11f-b7de-4d9a-b612-c580006ad044"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "vault",
            "metadata": [
              {
                "generation": 0,
                "name": "vault",
                "resource_version": "1037098",
                "uid": "605c9026-4138-4e2b-ac48-631d584d3c7e"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "doh-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "doh-proxy/doh-proxy",
            "metadata": [
              {
                "generation": 0,
                "name": "doh-proxy",
                "namespace": "doh-proxy",
                "resource_version": "11466358",
                "uid": "c4f8cd1c-d07e-4c87-9a4b-1ddb2004311a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.29.228",
                "cluster_ips": [
                  "10.102.29.228"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "doh-proxy"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "helm_release.coredns",
            "helm_release.longhorn",
            "helm_release.metallb",
            "helm_release.registry",
            "helm_release.traefik",
            "kubernetes_deployment.doh-proxy",
            "kubernetes_namespace.coredns",
            "kubernetes_namespace.doh-proxy",
            "kubernetes_namespace.longhorn",
            "kubernetes_namespace.metallb",
            "kubernetes_namespace.registry",
            "kubernetes_namespace.traefik",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "infra_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "infra-api/infra-api",
            "metadata": [
              {
                "generation": 0,
                "name": "infra-api",
                "namespace": "infra-api",
                "resource_version": "12065404",
                "uid": "e3a744e8-859e-4e3a-85ef-6c8aadaea9cc"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.103.199.113",
                "cluster_ips": [
                  "10.103.199.113"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "6443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.infra_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginxtest",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "nginxtest/nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx",
                "namespace": "nginxtest",
                "resource_version": "5245989",
                "uid": "fef61992-47f2-4a00-86e6-904c8ed1d66b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.139.31",
                "cluster_ips": [
                  "10.110.139.31"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.talos_client_configuration.all_nodes",
            "data.talos_image_factory_extensions_versions.this",
            "data.talos_machine_configuration.controlplane",
            "local_sensitive_file.kubeconfig",
            "proxmox_vm_qemu.node",
            "talos_cluster_kubeconfig.this",
            "talos_image_factory_schematic.this",
            "talos_machine_bootstrap.controlplane",
            "talos_machine_configuration_apply.controlplane",
            "talos_machine_secrets.all_nodes"
          ]
        }
      ]
    }
  ]
}